MINOR: increasing composer validation to be strict

--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "silverstripe/googlesitemaps": "^1.0",
         "axllent/silverstripe-trailing-slash": "^1.0",
         "micschk/silverstripe-liveseo": "^2.0",
-        "Graphiques-Digitale/silverstripe-seo-icons": "*",
+        "Graphiques-Digitale/silverstripe-seo-icons": "^1.0",
         "Graphiques-Digitale/silverstripe-seo-facebook-domain-insights": "^1.0",
         "Graphiques-Digitale/silverstripe-seo-open-graph": "^1.0"
     },
